# sp_index

./: .env.example  .gitignore  .safety-project.ini  AGENTS.md  README.md  image_prompt.txt  mcp_search_flow.mmd  pyproject.toml
agent/: .gitignore  README.md  agent.py  diagram.mmd  sequence.mmd  tui.py
ai_search_jsons/: datasource.json  index.json  indexer.json  skillset.json
config/: create_index.py  create_knowledge_base.py  create_knowledge_source.py  lookup_group.py  query_acl.py  query_elevated.py  query_kb.py  shared.py
direct/: remote_sp_knowledge_base.py
mcp/: README.md  client.py  server.py
scripts/: create_resources.sh  create_sp_app_registration.sh  destroy_resources.sh  elevated-read-role.json  run_safety_scan.sh  run_trivy_scan.sh
